Issue #2934178 by samuel.mortenson, DyanneNova, xjm, yoroy, andrewmacpherson: Contrast issues with off-canvas dialog styling

--- a/core/misc/dialog/off-canvas.button.css
+++ b/core/misc/dialog/off-canvas.button.css
@@ -69,7 +69,7 @@
 #drupal-off-canvas input[type="submit"].button--primary:hover,
 #drupal-off-canvas input[type="submit"].button--primary:focus,
 #drupal-off-canvas input[type="submit"].button--primary:active {
-  background: #2b8bd8;
+  background: #236aaf;
   outline: none;
 }
 #drupal-off-canvas .button-action:before {
