--- a/core/themes/stable/css/core/dialog/off-canvas.table.css
+++ b/core/themes/stable/css/core/dialog/off-canvas.table.css
@@ -46,7 +46,6 @@
 }
 #drupal-off-canvas th {
   font-weight: bold;
-  color: #bbb;
 }
 #drupal-off-canvas th.checkbox,
 #drupal-off-canvas td.checkbox {
